--- a/src/index.scss
+++ b/src/index.scss
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+* {
+  box-sizing: border-box;
+}
+
+div {
+  display: grid;
+  grid-template-columns: 1fr;
+  ul {
+   
+  }
+ }
