--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #fef6e4;
 }
 
 code {
@@ -18,7 +19,50 @@ code {
 div {
   display: grid;
   grid-template-columns: 1fr;
+  margin: 10px;
+  
   ul {
-   
+    list-style-type: none;
+    background-color: #f3d2c1;
+    display: flex;    
+    padding: 10px; 
+    width: 400px;
+    justify-content: center;
+    justify-self: center;
+    border-width: 3px;
+    border-color: #001858;
+
   }
  }
+
+ @media only screen and (min-width: 770px) {
+  body {
+      display: grid;
+      grid-template-columns: auto auto auto auto;
+    
+  }
+  div {
+    ul {
+     display: flex;
+     max-width: 400px; 
+     min-height: 400px;
+      padding: 20px; 
+      margin: 15px;
+    }
+    h2 {
+      display: flex;
+      justify-self: center;
+      justify-content: center;
+    }
+    p {
+      display: flex;
+      flex-direction: column;
+      padding: 10px; 
+      width: 400px;
+    }
+    img {
+      max-width: 350px;
+      justify-self: center;
+    }
+  }
+}
