--- a/src/index.scss
+++ b/src/index.scss
@@ -87,53 +87,81 @@ background-color: #ffc0ad;
   }
 }
 
-
 ////////
-/// INDEX
+/// FAVES PAGE
 //////////
 
+
+  .favoriteArea {
+
+    background-color: #fef6e4;
+    display: grid;
+    grid-template-columns: 1fr;
+  
+  
+  .favoritePetsContainer {
  
-.favoritePetsContainer {
-  // put into cards with name on top, image in middle, and age, gender, location on bottom
-  display:flexbox;
-  grid-template-columns: auto;
-  grid-template-rows: auto;
-  grid-gap: 10px;
-  justify-content: center;
-  justify-items: center;
-  align-items: center;
-  align-content: center;
-  background-color: #9656a1;
-  // all items in center
-  
-  
-  .favoritePetCard {
-    display: flex;
-    padding: 10px;
     
-    justify-self: center;
-    justify-content: center;
-    list-style-type: none;
-    background-color: #8bd3dd;
-    padding: 10px; 
-    // fit card to image and text
-    max-width: 400px;
-    max-height: 400px;
-    margin: 10px;
-    border-width: 3px;
-    border-style: solid;
-    border-radius: 30px;
-    border-color: #001858;
-    // center text
-    text-align: center;
-    // center image
-    align-items: center;
+    .link {
+      text-decoration: none;
+    }
+    
+    
+    .favoritePetCard {
+      display: flex;
+      flex-direction: column;
+      margin: 10px;
+      justify-self: center;
+      justify-content: center;
+      list-style-type: none;
+      background-color: #8bd3dd;
+      padding: 10px; 
+      width: 400px;
+      margin: 10px;
+      border-width: 3px;
+      border-style: solid;
+      border-radius: 30px;
+      border-color: #001858;
+    }
+    .favoriteName {
+      font-family: 'Lilita One', cursive;
+      display: flex;
+      justify-content: center;
+      text-decoration: none;
+    }
+    
+    .favoritePic {
+      display: flex;
+      flex-direction: column;
+      max-height: 400px;
+      justify-content: center;
+      justify-self: center;
+      max-width: 350px;
+      min-width: 300px;
+      border-style: solid;
+      border-width: 3px;
+      border-color: #001858; 
+    }
+    .favoriteAge {
+      
+      display: flex;
+      justify-content: center;
+      text-decoration: none;
+    }
+    .favoriteGender {
+      display: flex;
+      justify-content: center;
+    }
+    .favoriteBreeds {
+      display: flex;
+      justify-content: center;
+    }
+    
   }
-
 }
-
-.favoritePetRow {
- display: grid;
+  
+  .favoritePetRow {
+     display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
   grid-gap: 10px;
@@ -143,12 +171,17 @@ background-color: #ffc0ad;
   align-content: center;
 }
 
-
+////////
+/// INDEX
+//////////
 
 ul {
   
       display: grid;
     grid-template-columns: 1fr;
+    .petLink {
+      text-decoration: none;
+    }
 
   .indexCard {
     display: flex;
@@ -170,6 +203,7 @@ ul {
     font-family: 'Lilita One', cursive;
     display: flex;
     justify-content: center;
+    text-decoration: none;
   }
 
   
@@ -231,8 +265,14 @@ ul {
   body {
       // display: grid;
       // grid-template-columns: auto auto auto auto;
-    
+      background-color: #fef6e4;
     }
+
+    //////
+    /// HEADER MEDIA QUERY
+    /// ///////////////
+    /// 
+    /// 
     .nav { 
       width: 100%;
     background-color: #55423d;
@@ -288,19 +328,89 @@ background-color: #ffc0ad;
         }
       }
     }
+/////////////////
+/// FAVES MEDIA QUERY
+///////////////////// 
+
+  .favoriteArea {
+    display: grid;
+    
+    // padding: 20px; 
+    // margin: 15px;
+    
+    .favoritePetsContainer {
+      grid-template-columns: auto auto auto auto ;
+
+  .favoritePetCard {
+
+  }
+      
+      
+      
+      
+    }
+    // all items in center
+    
+    .link {
+      text-decoration: none;
+    }
     
     
-    .displayPetDiv {
+    .favoritePetCard {
+      
+      display: flex;
+      flex-direction: column;
+      margin: 10px;
+      justify-self: center;
+      justify-content: center;
+      list-style-type: none;
+      background-color: #8bd3dd;
+      padding: 10px; 
+      width: 400px;
+      margin: 10px;
+      border-width: 3px;
+      border-style: solid;
+      border-radius: 30px;
+      border-color: #001858;
+    }
+    .favoriteName {
+      font-family: 'Lilita One', cursive;
+      display: flex;
+      justify-content: center;
+      text-decoration: none;
+    }
+    
+    .favoritePic {
+      display: flex;
+      flex-direction: column;
+      max-height: 400px;
+      justify-content: center;
+      justify-self: center;
+      max-width: 350px;
+      min-width: 300px;
+      border-style: solid;
+      border-width: 3px;
+      border-color: #001858; 
+    }
+    
+  }
+
+  /////////////////
+  /// INDEX MEDIA QUERY
+  ///////////////////// 
+    
+  
+  .displayPetDiv {
       .available {
         display: flex;
         justify-content: center;
         justify-self: center;
       }
       ul {
-     display: grid;
-     grid-template-columns: auto auto auto auto ;
-     max-width: 400px; 
-     min-height: 400px;
+        display: grid;
+        grid-template-columns: auto auto auto auto ;
+        max-width: 400px; 
+        min-height: 400px;
       padding: 20px; 
       margin: 15px;
     }
