reverts to last working vers (b4 outcomes started)

--- a/src/index.scss
+++ b/src/index.scss
@@ -29,91 +29,79 @@ h1 {
 /// HEADER
 //////////
 .nav { 
- 
-  background-color: #55423d;
-  display: grid;
+  width: 100%;
+background-color: #55423d;
+display: grid;
 // justify-content: flex-end;
-}
+grid-template-columns: 
+1fr
+2fr
+1fr;  
   .headerDiv {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
     background-color: #55423d;
+    grid-column: 1;
     font-family: 'Lilita One', cursive;
     font-size: 25px;
-    margin-left: 3rem;
-    color: white;
+    padding: 5px;
+  
     // justify-self: flex-start;
     // align-self:flex-start;
   }
-
-  
-
   ul {
     display: flex;
     list-style: none;
     grid-column: 3;
     padding: 5px;
-  }
-
-  .welcome {
-    display: flex;
-    padding-top: 1rem;
-    margin-right: 4rem;
-    color: white;
-    text-align: center;
-  }
-
-  .google-profile-pic {
+    .welcome {
+  // margin: 5px;
+  max-width: 70px;
+  font-family: 'Lilita One', cursive;
+      
+    
+    }
+    .google-profile-pic {
+      grid-column: 3;
       border-radius: 50%;
+      margin: 5px;
       max-width: 50px;
     }
-  .pic-google-li {
-    margin-left: 2rem;
-  }
-    
-
- .buttonArea {
-    margin: 2rem;
+    .buttonArea {
+    display: flex;
+    align-items: center;
     }
-
-  .logoutButton {
-    margin-left: 1rem;
+    .logoutButton {
 align-content: center;
 border: none;
 border-radius: 6px;
 background-color: #ffc0ad;
 
-}
-
-  .loginButton {
+    }
+    .loginButton {
       align-content: center;
-      border: none;
+border: none;
 border-radius: 6px;
 background-color: #ffc0ad;
 
     }
+  }
+}
+
 
 ////////
-/// FAVES PAGE
+/// INDEX
 //////////
 
-
-  .favoriteArea {
-
-    background-color: #fef6e4;
-    display: grid;
-    grid-template-columns: 1fr;
-
-.animals-button {
+ .animals-button {
   padding-top: 5rem;
   margin-left: 6rem;
-  color:#001858
 
  }
 
  .animals-button label {
   display: inline-block;
-    background-color: #f582ae;
+    background-color: #cbdaf6;
     padding: 10px 20px;
     font-family: sans-serif, Arial;
     font-size: 16px;
@@ -170,72 +158,37 @@ background-color: #ffc0ad;
   align-items: center;
   align-content: center;
   background-color: #9656a1;
+  // all items in center
   
   
-  .favoritePetsContainer {
- 
+  .favoritePetCard {
+    display: flex;
+    padding: 10px;
     
-    .link {
-      text-decoration: none;
-    }
-    
-    
-    .favoritePetCard {
-      display: flex;
-      flex-direction: column;
-      margin: 10px;
-      justify-self: center;
-      justify-content: center;
-      list-style-type: none;
-      background-color: #8bd3dd;
-      padding: 10px; 
-      width: 400px;
-      margin: 10px;
-      border-width: 3px;
-      border-style: solid;
-      border-radius: 30px;
-      border-color: #001858;
-    }
-    .favoriteName {
-      font-family: 'Lilita One', cursive;
-      display: flex;
-      justify-content: center;
-      text-decoration: none;
-    }
-    
-    .favoritePic {
-      display: flex;
-      flex-direction: column;
-      max-height: 400px;
-      justify-content: center;
-      justify-self: center;
-      max-width: 350px;
-      min-width: 300px;
-      border-style: solid;
-      border-width: 3px;
-      border-color: #001858; 
-    }
-    .favoriteAge {
-      
-      display: flex;
-      justify-content: center;
-      text-decoration: none;
-    }
-    .favoriteGender {
-      display: flex;
-      justify-content: center;
-    }
-    .favoriteBreeds {
-      display: flex;
-      justify-content: center;
-    }
-    
+    justify-self: center;
+    justify-content: center;
+    list-style-type: none;
+    background-color: #8bd3dd;
+    padding: 10px; 
+    // fit card to image and text
+    max-width: 400px;
+    max-height: 400px;
+    margin: 10px;
+    border-width: 3px;
+    border-style: solid;
+    border-radius: 30px;
+    border-color: #001858;
+    // center text
+    text-align: center;
+    // center image
+    align-items: center;
   }
-}
-  
-  .favoritePetRow {
-     display: grid;
 
+}
+
+
+.favoritePetRow {
+ display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: auto;
   grid-gap: 10px;
@@ -245,15 +198,12 @@ background-color: #ffc0ad;
   align-content: center;
 }
 
-////////
-/// INDEX
-//////////
+
 
 ul {
   
       display: grid;
     grid-template-columns: 1fr;
-    font-family: 'Lilita One', cursive;
 
   .indexCard {
     display: flex;
@@ -262,20 +212,19 @@ ul {
     justify-self: center;
     justify-content: center;
     list-style-type: none;
-    background-color: #f3d2c1;
+    background-color: #8bd3dd;
     padding: 10px; 
     width: 400px;
     margin: 10px;
     border-width: 3px;
     border-style: solid;
     border-radius: 30px;
-    border-color: #8bd3dd;
+    border-color: #001858;
   }
   .petName {
     font-family: 'Lilita One', cursive;
     display: flex;
     justify-content: center;
-    text-decoration: none;
   }
 
   
@@ -297,7 +246,6 @@ ul {
   }
   .indexAge {
    text-align: center;
-   color: #172c66;
   }
 
   .indexLocation {
@@ -305,25 +253,12 @@ ul {
 
   }
  }
-
- .displayPetDiv {
- 
- }
- 
- .available {
-    display: flex;
-    justify-self: center;
-    color:#001858;
-  
- }
 /////////
 /// SHOW
 ////////
 .showPetDiv {
   
-  .showPetName {
 
-  }
   .showPic {
     display: flex;
     max-height: 400px;
@@ -337,9 +272,7 @@ ul {
         border-color: #001858; 
 
   }
-  .showDescription {
 
-  }
   .showBreed {
     display: flex;
     justify-self: center;
@@ -351,19 +284,9 @@ ul {
   }
 }
  @media only screen and (min-width: 770px) {
-  body {
-      // display: grid;
-      // grid-template-columns: auto auto auto auto;
-      background-color: #fef6e4;
-    }
 
-    //////
-    /// HEADER MEDIA QUERY
-    /// ///////////////
-    /// 
-    /// 
     .nav { 
-    width: 100%;
+      width: 100%;
     background-color: #55423d;
     display: grid;
     // justify-content: flex-end;
@@ -373,7 +296,7 @@ ul {
     1fr;  
       .headerDiv {
        
-        grid-column: 1fr 2fr 1fr;
+        grid-column: 1;
         font-family: 'Lilita One', cursive;
       
         // justify-self: flex-start;
@@ -417,79 +340,9 @@ background-color: #ffc0ad;
         }
       }
     }
-/////////////////
-/// FAVES MEDIA QUERY
-///////////////////// 
-
-  .favoriteArea {
-    display: grid;
-    
-    // padding: 20px; 
-    // margin: 15px;
-    
-    .favoritePetsContainer {
-      grid-template-columns: auto auto auto auto ;
-
-  .favoritePetCard {
-
-  }
-      
-      
-      
-      
-    }
-    // all items in center
-    
-    .link {
-      text-decoration: none;
-    }
     
     
-    .favoritePetCard {
-      
-      display: flex;
-      flex-direction: column;
-      margin: 10px;
-      justify-self: center;
-      justify-content: center;
-      list-style-type: none;
-      background-color: #8bd3dd;
-      padding: 10px; 
-      width: 400px;
-      margin: 10px;
-      border-width: 3px;
-      border-style: solid;
-      border-radius: 30px;
-      border-color: #001858;
-    }
-    .favoriteName {
-      font-family: 'Lilita One', cursive;
-      display: flex;
-      justify-content: center;
-      text-decoration: none;
-    }
-    
-    .favoritePic {
-      display: flex;
-      flex-direction: column;
-      max-height: 400px;
-      justify-content: center;
-      justify-self: center;
-      max-width: 350px;
-      min-width: 300px;
-      border-style: solid;
-      border-width: 3px;
-      border-color: #001858; 
-    }
-    
-  }
-
-  /////////////////
-  /// INDEX MEDIA QUERY
-  ///////////////////// 
-    
-  
-  .displayPetDiv {
+    .displayPetDiv {
       .available {
         display: flex;
         justify-content: center;
@@ -497,10 +350,9 @@ background-color: #ffc0ad;
       }
       ul {
      display: grid;
-     grid-template-columns: auto auto auto ;
+     grid-template-columns: auto auto auto auto ;
      max-width: 400px; 
      min-height: 400px;
-
       padding: 20px; 
       margin: 15px;
     }
@@ -514,7 +366,10 @@ background-color: #ffc0ad;
       justify-content: center;
     }
     .indexAge {
-      
+      display: flex;
+      flex-direction: column;
+      padding: 10px; 
+      width: 400px;
       // overflow: scroll;
     }
     .pic {
@@ -549,4 +404,3 @@ body {
   }
 }
 }
-  }
