adds css to make all the img the same size

--- a/src/index.scss
+++ b/src/index.scss
@@ -208,7 +208,7 @@ background-color: #ffc0ad;
 
 ul {
   
-      display: grid;
+    display: grid;
     grid-template-columns: 1fr;
     font-family: 'Lilita One', cursive;
 
@@ -242,13 +242,13 @@ ul {
     max-height: 400px;
     align-content: center;
     align-self: center;
-        max-width: 350px;
-        min-width: 300px;
-        min-height: 100px;
-        border-style: solid;
-        border-width: 3px;
-        border-color: #001858;
-        margin:auto; 
+    height: 350px;
+    width: 300px;
+    overflow: hidden;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #001858;
+    margin:auto; 
        
   }
   .indexAge {
@@ -262,16 +262,18 @@ ul {
   }
  }
 
- .displayPetDiv {
- 
+ .display-pet-div {
+  width: 80%;
+  margin: 0 auto;
  }
  
  .available {
-    display: flex;
-    justify-self: center;
+    text-align: center;
     color:#001858;
-  
  }
+ .animal-name-link {
+  text-decoration: none;
+}
 /////////
 /// SHOW
 ////////
@@ -387,6 +389,10 @@ background-color: #ffc0ad;
       padding: 10px;
       margin: 10px;
     }
+
+  .animal-name-link {
+    text-decoration: none;
+  }
     .petName {
       display: flex;
       justify-self: center;
@@ -396,10 +402,7 @@ background-color: #ffc0ad;
       
       // overflow: scroll;
     }
-    .pic {
-      max-width: 350px;
-      justify-self: center;
-    }
+   
   }
 }
 
