fix show page color

--- a/src/index.scss
+++ b/src/index.scss
@@ -319,18 +319,18 @@ ul {
     justify-self: center;
     justify-content: center;
     list-style-type: none;
-    background-color: #8bd3dd;
+    background-color: #f3d2c1;
     padding: 10px; 
     max-width: 400px;
     margin: 10px;
     border-width: 5px;
     border-style: solid;
     border-radius: 10px;
-    border-color: #172c66;
+    border-color: #06c1fa;
     text-align: center;
     color: #001858;
   .showPetName {
-    grid-template-areas: 1;
+    // grid-template-areas: 1;
     justify-content: center;
   justify-self: center;
   color: #140d0b;
